Fix Bug #692914 - Postscript MediaType lost.

Thanks to Hin-Tak Leung for adding support for MediaType to PXL output
drivers.